--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 		"php": "^8.0",
 		"php-64bit": "*",
 		"pocketmine/binaryutils": "^0.2.0",
-		"pocketmine/raklib": "dev-stable"
+		"pocketmine/raklib": "dev-legacy/0.14"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "1.10.1",
